--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2,165 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67ed5c70",
+   "id": "679bd23c",
    "metadata": {},
    "source": [
-    "Data Types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "98d006a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number = 1\n",
-    "float = 5.5\n",
-    "string = 'Joshua'\n",
-    "StringList = ['Apple', 'Banana', 'Orange']\n",
-    "NumberList = [1,2,3]\n",
-    "CombinedList = ['one', 2, 'three']\n",
-    "Dictionaries = {'firstname' : 'Joshua', 'age': 24}\n",
-    "isTrue = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d9180e96",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Apple\n",
-      "Joshua\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(StringList[0])\n",
-    "print(Dictionaries['firstname'])"
+    "--- DATA TYPE ---\n",
+    "\n",
+    "1 - Integer\n",
+    "\n",
+    "5.5 - Float\n",
+    "\n",
+    "Joshua' - String\n",
+    "\n",
+    "['Apple', 'Banana', 'Orange'] - Array String\n",
+    "\n",
+    "[1,2,3] - Array Number\n",
+    "\n",
+    "['one', 2, 'three'] - Combined Array\n",
+    "\n",
+    "{'firstname' : 'Joshua', 'age': 24} - Object\n",
+    "\n",
+    "True - Boolean"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "71a018eb",
+   "id": "ca3e52e1",
    "metadata": {},
    "source": [
-    "Numbers Arithmetic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "f514da10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number1 = 5\n",
-    "number2 = 8\n",
-    "number3 = 10\n",
+    "--- STRING ARTIHMETIC ---\n",
     "\n",
-    "addition = number1 + number2\n",
-    "subtraction = number2 - number3\n",
-    "multiplication = number1 * number2 * number3\n",
-    "division = number3 / number1\n",
-    "modulo = number2 % number3\n",
-    "remainder = 23 % 2 # 1\n",
-    "noRemainder = 22 % 2 # 0\n",
-    "power = 2 ** 3 # 2 * 2 * 2 = 8\n",
-    "multiples = 2 + 3 * 4 + 5 # 19\n",
-    "specifics = (2 + 3) * (4 + 5) # 45"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "8206c3b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "0\n",
-      "8\n",
-      "19\n",
-      "45\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(remainder)\n",
-    "print(noRemainder)\n",
-    "print(power)\n",
-    "print(multiples)\n",
-    "print(specifics)"
+    "indexingString[0] - first letter\n",
+    "\n",
+    "indexingString[-1] - last letter\n",
+    "\n",
+    "slicingString[5:] - display index 5 and up\n",
+    "\n",
+    "slicingString[0:4] - display between index 0 to 4\n",
+    "\n",
+    "stepSlicingString[::2] - removing every 2 step\n",
+    "\n",
+    "stepSlicingString[0:5:2] - removing every 2 step between 0 to 5"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f35245e9",
+   "id": "7a08ef32",
    "metadata": {},
    "source": [
-    "Strings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa3a96a3",
-   "metadata": {},
-   "source": [
-    "print(indexingString[0]) - first letter\n",
+    "--- STRING FORMAT ---\n",
     "\n",
-    "print(indexingString[-1]) - last letter\n",
+    "'Sample String {} {} {}'.format('A', 'B', 'C') // Sample String A B C\n",
     "\n",
-    "print(slicingString[5:]) - display index 5 and up\n",
+    "'Sample String {0} {0} {0}'.format('A', 'B', 'C') // Sample String A A A\n",
     "\n",
-    "print(slicingString[0:4]) - display between index 0 to 4\n",
-    "\n",
-    "print(stepSlicingString[::2]) - removing every 2 stewp\n",
-    "\n",
-    "print(stepSlicingString[0:5:2]) - removing every 2 step between 0 to 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "91d05126",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "38\n",
-      "H\n",
-      "d\n",
-      "Joshua\n",
-      "Josh\n",
-      "13579\n",
-      "135\n"
-     ]
-    }
-   ],
-   "source": [
-    "stringLength = len(\"This will count the length of a string\")\n",
-    "indexingString = \"Hello World\"\n",
-    "slicingString = \"Josh Joshua\"\n",
-    "stepSlicingString = '123456789'\n",
-    "\n",
-    "print(stringLength)\n",
-    "print(indexingString[0]) # first letter\n",
-    "print(indexingString[-1]) # last letter\n",
-    "print(slicingString[5:]) # Joshua\n",
-    "print(slicingString[0:4]) # Josh\n",
-    "print(stepSlicingString[::2]) # 13579\n",
-    "print(stepSlicingString[0:5:2]) # 135"
+    "'Sample String {0} {1} {0}'.format('A', 'B', 'C') // Sample String A B A"
    ]
   }
  ],
